package com.ep.isw.grade.model;

public record EvaluationInput(String name, double score, double weightPercentage) {
}
